user repo checked