@@ -29,7 +29,7 @@ public class UserRepo implements BaseRepo<User>{
         PreparedStatement prs;
         List<User> users = new ArrayList<>();
         try {
-           prs = connection.prepareStatement("call find_all(%d)".formatted(limit));
+           prs = connection.prepareStatement(String.format("call getAllUsers(%d,%d)",30,(limit-1)*30));
            ResultSet rs = prs.executeQuery();
 
            while (rs.next()){
@@ -40,7 +40,7 @@ public class UserRepo implements BaseRepo<User>{
                user.setBirthdate(new Date(rs.getDate("birthdate").getTime()));
                user.setEmail(rs.getString("email"));
                user.setSignupDate(new Date(rs.getDate("singup_date").getTime()));
-               user.setRole(Role.valueOf(rs.getString("role")));
+               user.setRole(Role.valueOf(rs.getString("role").toUpperCase()));
                users.add(user);
            }
            prs.close();
@@ -57,7 +57,7 @@ public class UserRepo implements BaseRepo<User>{
         PreparedStatement prs ;
         User user ;
         try {
-            prs = connection.prepareStatement("call get(?)");
+            prs = connection.prepareStatement("call getUser(?)");
             prs.setInt(1,id);
             ResultSet rs = prs.executeQuery();
             if (rs.next()){
@@ -67,6 +67,7 @@ public class UserRepo implements BaseRepo<User>{
                 user.setEmail(rs.getString("email"));
                 user.setBirthdate(new Date(rs.getDate("birthdate").getTime()));
                 user.setSignupDate(new Date(rs.getDate("singup_date").getTime()));
+                user.setRole(Role.valueOf(rs.getString("role").toUpperCase()));
                 return user;
             }
             else {
@@ -81,32 +82,64 @@ public class UserRepo implements BaseRepo<User>{
 
     }
 
+    public User get(User user){
+        final String q1 = "start transaction";
+        final String q2 = String.format("call getUserByUsername(\"%s\",\"%s\")",user.getUsername(),user.getPassword());
+        final String q3 = "commit";
+
+        try(Statement statement = connection.createStatement()){
+            statement.execute(q1);
+            ResultSet rs = statement.executeQuery(q2);
+
+
+            if(rs.next()){
+                user.setId(rs.getInt("id"));
+                user.setRole(Role.valueOf(rs.getString("role").toUpperCase()));
+                user.setEmail(rs.getString("email"));
+                user.setBirthdate(rs.getDate("birthdate"));
+                user.setSignupDate(rs.getDate("singup_date"));
+                statement.execute(q3);
+            }else{
+                statement.execute(q3);
+                return null;
+            }
+
+            statement.execute(q3);
+        } catch (SQLException e) {
+            throw new RuntimeException(e);
+        }
+
+        return user;
+    }
+
     @Override
     public User save(User ob) {
         final String format = "yyyy-MM_dd";
         final SimpleDateFormat simpleDateFormat = new SimpleDateFormat(format);
         String q1 = "start transaction";
         StringBuffer q2 = new StringBuffer();
-        q2.append("insert into users (username,password,email,birthdate,signup_date,role) ");
-        q2.append(String.format("values(%s,%s,%s,%s,now(),%s)",
+        q2.append("insert into users (username,password,email,birthdate,singup_date,role) ");
+        q2.append(String.format("values (\"%s\",\"%s\",\"%s\",\"%s\",now(),\"%s\")",
                 ob.getUsername(),
                 ob.getPassword(),
                 ob.getEmail(),
                 simpleDateFormat.format(ob.getBirthdate()),
                 ob.getRole().toString()));
 
-        final String q3 = "select id from users weher username=%s and password=%s".formatted(ob.getUsername(),ob.getPassword());
+        final String q3 = "select id from users where username=\"%s\" and password=\"%s\" ".formatted(ob.getUsername(),ob.getPassword());
 
         Statement statement ;
         try {
             statement = connection.createStatement();
             statement.execute(q1);
+            System.out.println(q2.toString());
             statement.executeUpdate(q2.toString());
             ResultSet rs = statement.executeQuery(q3);
-            statement.execute("commit");
+
             if(rs.next()){
                 ob.setId(rs.getInt("id"));
             }
+            statement.execute("commit");
             statement.close();
         } catch (SQLException e) {
             throw new RuntimeException(e);
@@ -120,7 +153,7 @@ public class UserRepo implements BaseRepo<User>{
     public boolean delete(User ob) {
 
         final String q1 = "START TRANSACTION";
-        final String query =  "delete from users where id =%s or username=%s".formatted(ob.getId(),ob.getUsername());
+        final String query =  "delete from users where id =\"%s\" or username=\"%s\" ".formatted(ob.getId(),ob.getUsername());
 
 
       Statement statement;
@@ -150,20 +183,22 @@ public class UserRepo implements BaseRepo<User>{
     @Override
     public boolean update(User ob) {
         final String q1 = "START TRANSACTION";
-        String q2 = "update users set username=%s," +
-                "password=%s," +
-                "birthdate=%s," +
-                "email=%s";
+        String q2 = "update users set username=\"%s\"," +
+                "password=\"%s\"," +
+                "birthdate=\"%s\"," +
+                "email=\"%s\" " +
+                "where id = %d";
 
-        q2 = q2.formatted(ob.getUsername(),ob.getPassword(),
+        q2 =String.format(q2 , ob.getUsername(),ob.getPassword(),
                 dateFormating.format("yyyy-MM-dd",ob.getBirthdate()),
-                ob.getEmail());
+                ob.getEmail(),ob.getId());
 
 
         Statement statement;
         try {
             statement = connection.createStatement();
             statement.execute(q1);
+            System.out.println(q2);
             int rs = statement.executeUpdate(q2);
             statement.execute("commit");
             if (rs==0){
